fix for buttons under/behind other elements
z-index and position relative FTW

--- a/style.css
+++ b/style.css
@@ -455,6 +455,8 @@ footer .socialicons ul li.instagram a
 
 .btn.btn-primary
 {
+	position:relative;
+	z-index:998;
 	font-family: "MyriadPro";
 	font-weight: 400;
 	font-size: 18px;
